--- a/public/Pages/Home.html
+++ b/public/Pages/Home.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mundo Anime</title>
-    <link rel="stylesheet" href="Styles/Styles_Index.css">
-    <video src="Video/Index.mp4" autoplay loop></video>
+    <link rel="stylesheet" href="../Styles/Styles_Index.css">
+    <video src="../Video/Index.mp4" autoplay loop></video>
 </head>
 
 <body>
@@ -14,15 +14,15 @@
         <div class="menu-container">
             <h3>Menu</h3>
             <hr>
-            <a href="Pages/Recomendados.html">Recomendados</a><br>
+            <a href="Recomendados.html">Recomendados</a><br>
             <hr>
-            <a href="Pages/Noticias y Actulizaciones.html">Noticias y Actualizaciones</a><br>
+            <a href="Noticias y Actulizaciones.html">Noticias y Actualizaciones</a><br>
             <hr>
-            <a href="Pages/Historia.html">Historia del Anime</a><br>
+            <a href="Historia.html">Historia del Anime</a><br>
             <hr>
-            <a href="Pages/Contactanos.html">Contáctanos</a><br>
+            <a href="Contactanos.html">Contáctanos</a><br>
             <hr>
-            <a href="https://www.google.com/?hl=es">Exit</a><br><br>
+            <a href="index.html">Exit</a><br><br>
         </div>
     </nav>
     <center>
@@ -36,30 +36,30 @@
         <h2>SUMERGETE</h2><br><br>
     </center>
     <div class="logo">
-        <img src="Images/anime-logo.png" alt="Logo de SofTech Solutions" >
+        <img src="../Images/anime-logo.png" alt="Logo de SofTech Solutions" >
     </div>
     <div id="Contenido2">
         <p align="center"><strong>Recomendados</strong></p>
         <hr>
-        <img class="Imagenes" src="Images/Recomendados.png" width="220" height="220">
+        <img class="Imagenes" src="../Images/Recomendados.png" width="220" height="220">
         <p align="center">En la sección de Recomendados encontrarás nuestras selecciones de los mejores animes según diferentes géneros, épocas y popularidad. Desde clásicos imperdibles hasta las joyas más recientes, te ofrecemos recomendaciones cuidadosamente curadas para que siempre tengas algo emocionante que ver.</p>
     </div>
     <div class="Contenido3">
         <p align="center"><strong>Noticias y Actualizaciones</strong></p>
         <hr>
-        <img class="Imagenes" src="Images/Noticias.webp" width="260" height="260">
+        <img class="Imagenes" src="../Images/Noticias.webp" width="260" height="260">
         <p align="center">Mantente al día con las últimas Noticias y Actualizaciones del mundo del anime. Aquí te informamos sobre nuevos lanzamientos, fechas de estreno, eventos importantes y todo lo que necesitas saber para estar al tanto de lo que ocurre en la industria del anime.</p>
     </div>
     <div id="Contenido4">
         <p align="center"><strong>Historias del Anime</strong></p>
         <hr>
-        <img class="Imagenes" src="Images/Historia del Anime.png" width="240" height="240">
+        <img class="Imagenes" src="../Images/Historia del Anime.png" width="240" height="240">
         <p align="center">Sumérgete en la rica Historia del Anime con artículos y ensayos que exploran su evolución, influencias culturales y los hitos que han marcado su desarrollo. Conoce los antecedentes de tus series favoritas y descubre cómo el anime ha llegado a ser lo que es hoy.</p>
     </div>
     <div class="Contenido5">
         <p align="center"><strong>Contactanos</strong></p>
         <hr>
-        <img class="Imagenes" src="Images/Contactanos.png" width="240" height="240">
+        <img class="Imagenes" src="../Images/Contactanos.png" width="240" height="240">
         <p align="center">¿Tienes preguntas, comentarios o sugerencias? Visita nuestra sección de Contacto para ponerte en comunicación con nosotros. Estamos aquí para ayudarte y valoramos tus opiniones. No dudes en enviarnos un mensaje y te responderemos lo antes posible.</p>
     </div>
 </body>
