--- a/public/Pages/Contactanos.html
+++ b/public/Pages/Contactanos.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
         <div class="icono-menu">
-            <a href="../Index.html"><img src="../Icons/casa.png" width="50" height="50"></img></a>
+            <a href="Home.html"><img src="../Icons/casa.png" width="50" height="50"></img></a>
             <p align="center">Regresar</p>
         </div>
 <center>
