--- a/public/Pages/Formulario.html
+++ b/public/Pages/Formulario.html
@@ -89,7 +89,7 @@
       });
 
       if (response.ok) {
-        window.location.href = "/index.html";
+        window.location.href = "home.html";
       } else {
         const error = await response.text();
         alert("Error al guardar: " + error);
