--- a/public/Pages/index.html
+++ b/public/Pages/index.html
@@ -41,7 +41,7 @@
       });
 
       if (response.ok) {
-        window.location.href = "home.html";
+        window.location.href = "Pages/Home.html";
       } else {
         const error = await response.text();
         alert("Error al guardar: " + error);
